Closed Bug 1942592 Opened 1 year ago Closed 1 year ago

TypedArray.includes() doesn't work in Nightly

Categories

(Core :: JavaScript Engine, defect, P1)

Firefox 136
defect

Tracking

()

RESOLVED FIXED
136 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox134 --- unaffected
firefox135 --- unaffected
firefox136 --- fixed

People

(Reporter: jardanejedly, Assigned: jandem)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:123.0) Gecko/20100101 Firefox/123.0 BigDickEnergy

Steps to reproduce:

I ran this code in console: new Uint32Array([0xffff0000]).includes(0xffff0000).

The version of Firefox is: nightly 136.0a1. The release channel is unaffected.

Actual results:

returned false

Expected results:

Should have returned true

The Bugbug bot thinks this bug should belong to the 'DevTools::Console' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Console
Product: Firefox → DevTools
Component: Console → JavaScript Engine
Keywords: regression
Product: DevTools → Core
Regressed by: 1941001

:anba, since you are the author of the regressor, bug 1941001, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(andrebargull)

Thanks for the report!

This is likely caused by the NumberEqualsInt32 check here.

Status: UNCONFIRMED → NEW
Ever confirmed: true

Using NumberEqualsInt64 may be the simplest fix. anba, I can post a patch for that if you're not working on something better.

A bit surprising that test262 doesn't have any tests for indexOf/includes/lastIndexOf on Uint32Array with a large uint32 value.

Yeah, using NumberEqualsInt64 seems to be the easiest fix for now.

Flags: needinfo?(andrebargull)
Assignee: nobody → jdemooij
Status: NEW → ASSIGNED
Pushed by jdemooij@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ccca39d284ff Fix TypedArray includes/indexOf/lastIndexOf to handle large Uint32Array values correctly. r=anba
Blocks: sm-runtime
Severity: -- → S3
Priority: -- → P1
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: