Bug 1942592 - Fix TypedArray includes/indexOf/lastIndexOf to handle large Uint32Array values correctly. r=anba

Differential Revision: https://phabricator.services.mozilla.com/D234935